Blackpurl/src/objects/Shop_Supplies__c.object
<CustomObject>
    <customSettingsType>Hierarchy</customSettingsType>
    <fields>
        <fullName>Applicable_Fee__c</fullName>
        <label>Applicable Fee</label>
        <length>40</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Calculation_Method__c</fullName>
        <label>Calculation Method</label>
        <length>40</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Itemized_by_labor_code__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Itemized by labor code</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Maximum_Per_Invoice__c</fullName>
        <label>Maximum Per Invoice</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>Supplies_Rate__c</fullName>
        <label>Supplies Rate</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Number</type>
    </fields>
    <label>Shop Supplies</label>
</CustomObject>